--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
       {
         "imports": {
           "preact": "https://esm.sh/preact@10.23.2",
+          "preact/hooks": "https://esm.sh/preact@10.23.2/hooks?external=preact",
           "https://esm.sh/preact/hooks": "https://esm.sh/preact@10.23.2/hooks?external=preact",
           "https://esm.sh/preact-custom-element": "https://esm.sh/preact-custom-element@4.3.0?external=preact",
           "https://esm.sh/htm/preact": "https://esm.sh/htm@3.1.1/preact?external=preact",
-          "https://esm.sh/wouter-preact": "https://esm.sh/wouter-preact@3.3.5"
+          "https://esm.sh/wouter-preact": "https://esm.sh/wouter-preact@3.3.5?external=preact",
+          "https://esm.sh/@preact/signals": "https://esm.sh/@preact/signals@1.3.0?external=preact"
         }
       }
     </script>
