--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="site.css" />
+    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="/site.css" />
     <script>
       // 3. API key
       window.gapi_loaded = Promise.withResolvers();
@@ -30,6 +30,6 @@
         }
       }
     </script>
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
