--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script async fetchpriority="high" src="https://apis.google.com/js/client.js"></script>
   </head>
   <body>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
